# Sen

./: .gitignore  README.md  Sen.sln
.github/workflows/: dotnet.yml
Assistant/: App.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Sen-Assistant.csproj
CDN/: README.md
CDN/language/: en.json
CDN/lib/: index.html
Engine/: README.md  analysis_options.yaml  pubspec.yaml
Engine/android/app/: build.gradle
Engine/ios/Runner/: Info.plist
Engine/ios/Runner.xcodeproj/: project.pbxproj
Engine/lib/: command.dart  main.dart  setting.dart
Engine/lib/bridge/: executor.dart  functions.dart  method.dart  notification_service.dart  service.dart
Engine/lib/common/: custom.dart  default.dart  version.dart
Engine/lib/components/: command.dart  rsb_workspace.dart  setting.dart  test.dart  widget.dart
Engine/lib/l10n/: app_en.arb  app_es.arb  app_pt.arb  app_vi.arb  app_zh.arb  l10n.dart
Engine/linux/: CMakeLists.txt  my_application.cc
Engine/linux/flutter/: generated_plugin_registrant.cc
Engine/macos/Flutter/: GeneratedPluginRegistrant.swift
Engine/macos/Runner.xcodeproj/: project.pbxproj
Engine/windows/: CMakeLists.txt
Engine/windows/flutter/: generated_plugins.cmake
Engine/windows/runner/: Runner.rc  main.cpp
EngineConfiguration/: README.md
EngineConfiguration/interface/: methods.json
Internal/: CMakeLists.txt  CMakePresets.json  Internal.cpp  Internal.h  Internal.hpp  README.md  build.ps1  build.sh
Internal/create/: build.ps1  build.sh
Internal/dependencies/ETCPACK/: CMakeLists.txt  etcpack.cxx  etcpack_original.cxx  image.cxx
Internal/dependencies/PVRTCCompressor/: CMakeLists.txt
Internal/dependencies/RectangleBinPack/: CMakeLists.txt  Rect.h
Internal/dependencies/Rijndael/: CMakeLists.txt  Rijndael.cpp  Rijndael.h
Internal/dependencies/avir/: CMakeLists.txt  lancir.h
Internal/dependencies/brotli/: CMakeLists.txt
Internal/dependencies/bzip2/: CMakeLists.txt
Internal/dependencies/etcpak/: Bitmap.cpp  BlockData.cpp  BlockData.hpp  CMakeLists.txt  ProcessRGB.cpp  System.cpp
Internal/dependencies/fmt/: CMakeLists.txt
Internal/dependencies/json/: CMakeLists.txt
Internal/dependencies/libpng/: CMAKELists.txt  CMakeLists.txt
Internal/dependencies/lzma/: CMakeLists.txt
Internal/dependencies/md5/: CMakeLists.txt  md5.cpp  md5.h
Internal/dependencies/open_vcdiff/: CMakeLists.txt  addrcache.cc  addrcache.h  blockhash.cc  checksum.h  compile_assert.h  decodetable.cc  decodetable.h  encodetable.cc  encodetable.h  headerparser.cc  instruction_map.cc  jsonwriter.cc  jsonwriter.h  vcdecoder.cc  vcdiffengine.cc  vcencoder.cc
Internal/dependencies/open_vcdiff/google/: vcencoder.h
Internal/dependencies/rg_etc1/: CMakeLists.txt
Internal/dependencies/tinyfiledialogs/: CMakeLists.txt  tinyfiledialogs.c
Internal/dependencies/tinyxml2/: CMakeLists.txt
Internal/dependencies/zlib/: CMakeLists.txt  gzlib.c
Internal/kernel/tool/algorithm/: max_rects.hpp
Internal/kernel/tool/compress/: bzip2.hpp  lzma.hpp
Internal/kernel/tool/diff/: vcdiff.hpp
Internal/kernel/utility/: utility.hpp
Internal/kernel/utility/array/: common.hpp
Internal/kernel/utility/buffer/: common.hpp
Internal/kernel/utility/exception/: common.hpp
Internal/kernel/utility/filesystem/: common.hpp
Internal/kernel/utility/image/: common.hpp
Internal/kernel/utility/path/: common.hpp
Internal/kernel/utility/string/: common.hpp
Internal/tool/encode/: encode.hpp
MaUIShell/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MaUIShell.csproj  MaUIShell.sln  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  myapp.keystore
MaUIShell/Core/Standards/: FileSystem.cs
Material/: README.md  analysis_options.yaml  pubspec.yaml
Material/android/app/: build.gradle
Material/lib/: command.dart  main.dart  setting.dart
Material/lib/bridge/: executor.dart  functions.dart  method.dart  notification_service.dart  service.dart
Material/lib/common/: basic.dart  custom.dart
Material/lib/components/: widget.dart
Material/lib/l10n/: app_en.arb  app_vi.arb  l10n.dart
Material/lib/subprocess/: lotus_api.dart
Material/linux/: CMakeLists.txt
Material/linux/flutter/: generated_plugins.cmake
Material/macos/Flutter/: GeneratedPluginRegistrant.swift
Material/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
Material/windows/runner/: main.cpp
Properties/: Program.cs
Script/: README.md  Shell.d.ts  dotnet.d.ts  link.bat  link.ps1  link.sh  main.ts  temporary.ts  test.ts  tsconfig.json
Script/Modules/Constraints/: Bitmap.ts  Compression.ts  Crypto.ts
Script/Modules/Customization/: entry.json  functions.json
Script/Modules/Executable/: command.json  test.ts
Script/Modules/Interface/: Arguments.ts  Assert.ts  Batch.ts  Execute.ts
Script/modules/: README.md
Script/modules/constraints/: bitmap.ts  compression.ts  crypto.ts  filesystem.ts  json.ts  platform.ts
Script/modules/customization/: entry.json  entry.lua  functions.json  functions.lua
Script/modules/interface/: arguments.ts  assert.ts  execute.ts
Script/modules/language/: English.json
Scripts/: main.js  test.js
Scripts/modules/constraints/: compression.js  crypto.js  filesystem.js  json.js  platform.js
Sen-Assistant/: App.xaml.cs  AppShell.xaml  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  Sen-Assistant.csproj  Sen-Assistant.sln
Shell/: Global.cs  Program.cs  README.md  Sen.csproj  Sen.sln  compile.bat  compile.ps1  compile.sh  run.bat
Shell/Kernel/Internal/: Internal.cs  LotusAPI.cs
Shell/Kernel/JavaScript/: Evaluate.cs  Version.cs
Shell/Kernel/Standards/: APNGMaker.cs  Bitmap.cs  Buffer.cs  Compress.cs  Crypto.cs  Exception.cs  Fetch.cs  FileSystem.cs  Json.cs  Platform.cs  System.cs
Shell/Kernel/Support/: LotusModule.cs
Shell/Modules/Internal/: Internal.cs  LotusAPI.cs
Shell/Modules/JavaScript/: Evaluate.cs  Version.cs
Shell/Modules/Lua/: Evaluate.cs
Shell/Modules/Standards/: APNGMaker.cs  Bitmap.cs  Buffer.cs  Compress.cs  Crypto.cs  Exception.cs  (+5 more)
Shell/Properties/: launchSettings.json
src/: Program.cs
(+405 files in other folders)
